<resources>
    <string name="app_name">MoviesBox</string>

    <!-- Notification channel details-->
    <string name="channel_name" translatable="false">MoviesBoxChannel</string>
    <string name="channel_description" translatable="false">This channel is created having all the notifications related to MoviesBox</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_popular_movies">Popular Movies</string>
    <string name="nav_trending_movies">Trending Movies</string>
    <string name="nav_share">Share</string>
    <string name="nav_about_us">Privacy policy</string>
    <string name="nav_title_generic">Generic</string>

    <!-- Action bar toggle-->
    <string name="action_bar_toggle_open" translatable="false">Open</string>
    <string name="action_bar_toggle_close" translatable="false">False</string>

    <!--Home screen-->
    <string name="popular_movies_title">Popular Movies</string>
    <string name="upcoming_movies_title">Upcoming Movies</string>
    <string name="trending_movies_title">Trending Movies</string>
    <string name="top_rated_movies_title">Top Rated Movies</string>
    <string name="now_playing_movies_title">Now Playing Movies</string>

    <!--Content description-->
    <string name="movie_image">movieImage</string>

    <!-- Movie detail screen -->
    <string name="movie_overview_title">Overview</string>
    <string name="movie_release_date_title">Release Date</string>

    <!-- Home screen item listing-->
    <string name="release_on">Release on: %s</string>

    <!-- Menu options-->
    <string name="dark_mode_on">Turn ON Dark mode</string>
    <string name="dark_mode_off">Turn OFF Dark mode</string>

    <!-- Language -->
    <string name="language">English</string>
</resources>
